observability-stack-simple-ps-tools/deploy/k8s/observability/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: http
    - name: grpc
      port: 9095
      targetPort: grpc
  type: ClusterIP
