observability-stack-simple-ps-tools/deploy/k8s/observability/mimir-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir
spec:
  selector:
    app.kubernetes.io/name: mimir
  ports:
    - name: http
      port: 9009
      targetPort: http
