observability-stack-simple-ps-tools/deploy/k8s/observability/tempo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  selector:
    app.kubernetes.io/name: tempo
  ports:
    - name: http
      port: 3200
      targetPort: http
    - name: grpc
      port: 9095
      targetPort: grpc
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
    - name: otlp-http
      port: 4318
      targetPort: otlp-http
  type: ClusterIP
